--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,12 @@ ul li{
     margin: 0 auto;
     padding: 0 30px;
 }
+
+.wrapper-2{
+    width: 96%;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 nav{
     background-color: #fff;
     color: black;
@@ -821,15 +827,376 @@ footer{
     padding-top: 30px;
 }
 
+/* Shop 2 page style */
+
+.dresses{
+    padding: 60px 0;
+}
+.category-summary h3{
+    font-weight: 600;
+    text-align: center;
+    color: #313030;
+    font-family: Jost;
+    font-size: 16px;
+    line-height: 1.75;
+    margin: 0;
+}
+
+.category-summary span{
+    text-align: center;
+    display: block;
+    color: #707070;
+    font-size: 13px;
+}
+
+.dress-carousel .owl-dots{
+    margin-top: 40px !important;
+}
 
 
+/* Shop 3 page style */
+
+.womens-shirt{
+    width: 100%;
+    position: relative;
+    top: 80px;
+    border-top: 1px solid rgba(0,0,0,.1);
+    padding-bottom: 80px;
+}
+
+.womens-shirt-breadcrumb{
+    padding: 24px 0 38px 0;
+}
+
+.womens-shirt-breadcrumb ul li a{
+    color: #707070;
+    font-size: 16px;
+}
+
+.shop-active{
+    color: #313030 !important;
+    font-size: 16px;
+}
+
+.shirt-content{
+    padding-left:40px;
+}
+
+.shirt-title h1{
+    font-size: 35px;
+    text-transform: uppercase;
+    margin-bottom: 2px;
+    line-height: 1.3;
+    font-weight: 400;
+}
+.shirt-review{
+    margin-bottom: 12px;
+}
+
+.shirt-rate i{
+    font-size: 11px;
+    letter-spacing: 2px;
+    color: #313030;
+}
+
+.shirt-review span a{
+    color: #313030;
+    transition: all .3s ease-in-out;
+    margin-left: 8px;
+}
+
+.price-range p{
+    color: rgb(112, 112, 112);
+    font-size: 18px;
+}
+
+.shirt-counter-inner{
+    margin: 28px 0 30px 0;
+}
+
+.shirt-counter-item{
+    width: 60px;
+    height: 60px;
+    background-color: #f0f0f0;
+    text-align: center;
+}
+
+.shirt-counter-item p{
+    font-size: 24px;
+    font-weight: 400;
+    display: block;
+    margin-bottom: 2px;
+    color: #313030;
+}
+
+.shirt-details{
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    padding-bottom: 23px;
+    margin-bottom: 31px;
+}
+
+.shirt-details p{
+    line-height: 1.5;
+    color: #646464;
+}
+
+.size-chart-title p{
+    color: #313030;
+    font-size: 16px;
+}
+
+.size-chart-content{
+    margin-top: 30px;
+}
+
+.for-size li{
+    border: 1px solid rgb(235, 235, 235);
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.size-active{
+    border: 1px solid rgb(49, 48, 48);
+}
+
+.for-size li a{
+    display: block;
+    text-align: center;
+    color: #313030;
+}
+
+.for-size span{
+    color: #313030;
+    font-size: 16px;
+}
+
+.clear{
+    font-size: 13px !important;
+}
+
+.new-price-items del{
+    font-weight: 400;
+    color: #999;
+    font-size: 16px;
+}
+
+.new-price-items p{
+    font-size: 20px;
+}
+
+.new-price span{
+    color: rgb(119, 164, 100);
+    font-size: 14.72px;
+    line-height: 25.76px;
+}
+
+.add-items {
+    border:2px solid #ebebeb;
+}
+
+.add-items ul{
+    padding: 8px !important;
+}
+
+.add-to-card {
+    margin: 20px 0 15px 0;
+}
+
+.add-to-card-btn button{
+    background: #313030;
+    box-shadow: none;
+    border: 0;
+    color: #fff;
+    /* display: inline-block; */
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    overflow: hidden;
+    padding: 10px 80px;
+    text-shadow: none;
+    text-transform: capitalize;
+    text-align: center;
+    height: auto;
+    cursor: pointer;
+    transition: all .4s ease-out;;
+}
 
 
+.add-to-card-btn button:hover{
+    background: #313030;
+    border-color: #313030;
+    color: #fff;
+    opacity: .82;
+}
 
+.add-to-wishlist{
+    font-family: Jost;
+    font-size: 16px;
+    line-height: 1.75;
+    color: #707070;
+    font-weight: 400;
+}
 
+.divider{
+    margin-top: 40px;
+    border-top: 1px solid #ebebeb;
+    padding-top: 33px;
+}
 
+.share-product p{
+    text-transform: uppercase;
+    color: #707070;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
 
+.share-product p a{
+    text-transform: capitalize;
+    color: #313030;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
 
+.share-social-media span{
+    text-transform: uppercase;
+    color: #707070;
+    margin-bottom: 15px;
+    font-size: 16px;
+}
 
+.share-social-media a{
+    font-size: 14px;
+    margin-right: 10px;
+}
+
+#facebook{
+    color: #4267B2;
+}
+
+#pinterest{
+    color: #E60023;
+}
+
+#twitter{
+    color: #1DA1F2;
+}
+#whatsapp{
+    color: #4FCE5D;
+}
+
+.description{
+    position: relative;
+    top: 80px;
+}
+
+.description-top ul li a{
+    font-size: 20px;
+    color: rgb(136, 136, 136);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.description-active{
+    color: rgb(40, 40, 40) !important;
+    padding-bottom: 8px;
+    border-bottom: 3px solid black;
+}
+
+.description-top ul li a:hover{
+    color: rgb(40, 40, 40) !important;
+    padding-bottom: 8px;
+    border-bottom: 3px solid black;
+}
+
+.description-tab{
+    margin-bottom: 23px;
+}
+
+.description-top{
+    margin-bottom: 50px;
+}
+
+.description-bottom h4{
+    font-family: Jost;
+    line-height: 1.5;
+    color: #313030;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.description-bottom p{
+    font-family: Jost;
+    font-size: 16px;
+    line-height: 1.75;
+    color: #707070;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.headline-5{
+    font-family: Jost;
+    line-height: 1.5;
+    color: #313030;
+    font-weight: 400;
+    text-transform: none;
+    font-size: 22px;
+}
+.description-bottom ul li{
+    list-style: disc;
+    color: rgb(112, 112, 112);
+}
+
+.upsell-products{
+    position: relative;
+    top: 60px;
+}
+
+.upsell-title{
+    margin-bottom: 35px;
+}
+
+.related-products{
+    padding-bottom: 100px;
+}
+
+.shirt-video video{
+    width: 100%;
+    height: 100%;
+}
+.shirt-img{
+    margin-bottom: 25px;
+}
+
+.shirt-img img{
+    width: 100%;
+    height: 100%;
+}
+
+/* .womens-shirt-content{
+    position: fixed;
+    right: 0;
+} */
+.clothing-img{
+    margin-bottom: 30px;
+}
+.clothing-img img{
+    width: 100%;
+    height: 100%;
+}
+
+.clothing-title h1{
+    margin-bottom: 25px;
+}
+
+.clothing-content p{
+    font-family: Jost;
+    font-size: 16px;
+    line-height: 1.75;
+    color: #707070;
+    font-weight: 400;
+}
 
 
